--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>오름미디어</title>
+    <title>NOVA</title>
   </head>
   <body>
     <div id="root"></div>
